==> wangjianghua/DLMR-PDA/APP/uart_link.c <==
#include "includes.h"

void End_Init(void)
{
    P_END_OBJ pEndObj = NULL;
    unsigned char i;
    

    g_EndObject[PC_COM_PORT] = (pvoid)&PC_UART;
    g_EndObject[RS485_COM_PORT] = (pvoid)&RS485_UART;
    g_EndObject[PLC_COM_PORT] = (pvoid)&PLC_UART;
    g_EndObject[IR_COM_PORT] = (pvoid)&IR_UART;

    mem_msg_buffer_init((MSG_INFO *)gShortMsgPool, (P_MSG_INFO *)pShortMsgPool, MAX_MSG_SHORT, sizeof(MSG_SHORT_INFO));

    //alan test  需要暂时注释掉, 不知为啥IIC Start 一调用, MCU 就飞啦.
    for( i = START_COM_PORT; i < MAX_COM_PORT; i++)
    {
        // 找到当前End Object
        pEndObj = g_EndObjectPool + i;

        /* end queue[x] initialize */ /* each end object define '50 block' queue */
        g_EndTxQueue[i] = define_new_queue((queue *)pTxEndQueueBuf[i], END_TX_QUEUE_SIZE);
        g_EndRxQueue[i] = define_new_queue((queue *)pRxEndQueueBuf[i], END_RX_QUEUE_SIZE);
       
        pEndObj->end_recv_buffer = (unsigned char *)pUartRxBuf[i];

        pEndObj->last_receive_len = 0;
        pEndObj->receive_len = 0;

        pEndObj->recv_timeout = 0;

        UART_ReceiveData(i, pEndObj->end_recv_buffer, UART_RECV_BUF_SIZE);

        // 所有串口状态转到REVC STATUS
        pEndObj->end_send_status = END_STATUS_IDLE;

        __HAL_UART_ENABLE_IT((UART_HandleTypeDef *)g_EndObject[i], UART_IT_RXNE);
    }
}

U32 End_uart_send(UCHAR end_id, UCHAR *txbuf, USHORT txnum)
{
    UART_HandleTypeDef *UARTx;
    P_UART_CCB p_uc;
    UCHAR send_byte = 0;


    if( txnum < 1 )
    {
        return FALSE;
    }

    switch(end_id)
    {    
    case PC_COM_PORT:      
        UARTx = &PC_UART;
        break; 
        
    case RS485_COM_PORT:      
        UARTx= &RS485_UART;
        break; 
        
    case PLC_COM_PORT:      
        UARTx = &PLC_UART;
        break; 
        
    case IR_COM_PORT:
        UARTx = &IR_UART;
        break;
        
    default:
        return FALSE;
    }

    p_uc = &g_uart_ccb[end_id];

    p_uc->gpUartTxAddress = txbuf;
    p_uc->gUartTxCnt = txnum;

    send_byte = *(p_uc->gpUartTxAddress);

    p_uc->gpUartTxAddress++;
    p_uc->gUartTxCnt--;

    while(RESET == __HAL_UART_GET_FLAG(UARTx, UART_FLAG_TXE)); //关键

    UARTx->Instance->DR = (send_byte & (uint8_t)0xFF);

    while(RESET == __HAL_UART_GET_FLAG(UARTx, UART_FLAG_TC)); //关键

    if(p_uc->gUartTxCnt)
        __HAL_UART_ENABLE_IT(UARTx, UART_IT_TXE);
        
    return TRUE;
}

unsigned char End_postProcess(unsigned char end_type,  pvoid h)
{
    P_MSG_INFO pMsg = (P_MSG_INFO)h;
    USHORT iRet = FALSE;
    

    switch(end_type)
    {
    case PC_COM_PORT:
        iRet = PC_postProcess(pMsg);
        break;

    case RS485_COM_PORT:
        iRet = RS485_postProcess(pMsg);
        break;    

    case PLC_COM_PORT:
        iRet = PLC_postProcess(pMsg);
        break;        

    case IR_COM_PORT:
        iRet = IR_postProcess(pMsg);
        break;

    default:
        break;  
    }

    free_send_buffer(pMsg);

    return iRet;
}

void UART_IRQProc(UART_CCB *uccb, UART_HandleTypeDef *UARTx)
{
  uint32_t tmp1 = 0, tmp2 = 0;

    
  tmp1 = __HAL_UART_GET_FLAG(UARTx, UART_FLAG_PE);
  tmp2 = __HAL_UART_GET_IT_SOURCE(UARTx, UART_IT_PE); 

  /* UART parity error interrupt occurred ------------------------------------*/
  if((tmp1 != RESET) && (tmp2 != RESET))
  { 
    __HAL_UART_CLEAR_FLAG(UARTx, UART_FLAG_PE);
    
    UARTx->ErrorCode |= HAL_UART_ERROR_PE;
  }
  
  tmp1 = __HAL_UART_GET_FLAG(UARTx, UART_FLAG_FE);
  tmp2 = __HAL_UART_GET_IT_SOURCE(UARTx, UART_IT_ERR);
  /* UART frame error interrupt occurred -------------------------------------*/
  if((tmp1 != RESET) && (tmp2 != RESET))
  { 
    __HAL_UART_CLEAR_FLAG(UARTx, UART_FLAG_FE);
    
    UARTx->ErrorCode |= HAL_UART_ERROR_FE;
  }
  
  tmp1 = __HAL_UART_GET_FLAG(UARTx, UART_FLAG_NE);
  tmp2 = __HAL_UART_GET_IT_SOURCE(UARTx, UART_IT_ERR);
  /* UART noise error interrupt occurred -------------------------------------*/
  if((tmp1 != RESET) && (tmp2 != RESET))
  { 
    __HAL_UART_CLEAR_FLAG(UARTx, UART_FLAG_NE);
    
    UARTx->ErrorCode |= HAL_UART_ERROR_NE;
  }
  
  tmp1 = __HAL_UART_GET_FLAG(UARTx, UART_FLAG_ORE);
  tmp2 = __HAL_UART_GET_IT_SOURCE(UARTx, UART_IT_ERR);
  /* UART Over-Run interrupt occurred ----------------------------------------*/
  if((tmp1 != RESET) && (tmp2 != RESET))
  { 
    __HAL_UART_CLEAR_FLAG(UARTx, UART_FLAG_ORE);
    
    UARTx->ErrorCode |= HAL_UART_ERROR_ORE;
  }
  
  tmp1 = __HAL_UART_GET_FLAG(UARTx, UART_FLAG_RXNE);
  tmp2 = __HAL_UART_GET_IT_SOURCE(UARTx, UART_IT_RXNE);
  /* UART in mode Receiver ---------------------------------------------------*/
  if((tmp1 != RESET) && (tmp2 != RESET))
  { 
    //UART_Receive_IT(UARTx);
    
    *uccb->gpUartRxAddress++ = (uint8_t)(UARTx->Instance->DR & (uint8_t)0x00FF);
    
    if(uccb->gpUartRxAddress == uccb->gpUartRxEndAddress)
    {
      //回头
      uccb->gpUartRxAddress = uccb->gpUartRxStartAddress;
    }
	
    if(uccb->gpUartRxReadAddress == uccb->gpUartRxAddress)
    {
      //可以考虑加错误统计
    } 
    
    __HAL_UART_CLEAR_FLAG(UARTx, UART_FLAG_RXNE);

#if (LED_UART_EN > 0u)
    LED_UART_ON();
#endif    
  }
  
  tmp1 = __HAL_UART_GET_FLAG(UARTx, UART_FLAG_TXE);
  tmp2 = __HAL_UART_GET_IT_SOURCE(UARTx, UART_IT_TXE);
  /* UART in mode Transmitter ------------------------------------------------*/
  if((tmp1 != RESET) && (tmp2 != RESET))
  {
    //UART_Transmit_IT(UARTx);

    if(uccb->gUartTxCnt > 0)
    { 
      UARTx->Instance->DR = (uint8_t)(*uccb->gpUartTxAddress++ & (uint8_t)0x00FF);
      uccb->gUartTxCnt--;
    }
    else
    {
      __HAL_UART_DISABLE_IT(UARTx, UART_IT_TXE);
    }

    __HAL_UART_CLEAR_FLAG(UARTx, UART_FLAG_TXE);

#if (LED_UART_EN > 0u)
    LED_UART_ON();
#endif	    
  }
  
  if(UARTx->ErrorCode != HAL_UART_ERROR_NONE)
  {
    /* Set the UART state ready to be able to start again the process */
    UARTx->State = HAL_UART_STATE_READY;
    
    HAL_UART_ErrorCallback(UARTx);
  }    
}
