==> liuning587/PLC-TEST-EQPT/User/uart_link.c <==
#include "includes.h"

void End_Init(void)
{
    P_END_OBJ pEndObj = NULL;
    unsigned char i;
    

    mem_msg_buffer_init((MSG_INFO *)gShortMsgPool, (P_MSG_INFO *)pShortMsgPool, MAX_MSG_SHORT, sizeof(MSG_SHORT_INFO));

    //alan test  需要暂时注释掉, 不知为啥IIC Start 一调用, MCU 就飞啦.
    for( i = START_COM_PORT; i < MAX_COM_PORT; i++)
    {
        // 找到当前End Object
        pEndObj = g_EndObjectPool + i;

        /* end queue[x] initialize */ /* each end object define '50 block' queue */
        g_EndTxQueue[i] = define_new_queue((queue *)pTxEndQueueBuf[i], END_TX_QUEUE_SIZE);
        g_EndRxQueue[i] = define_new_queue((queue *)pRxEndQueueBuf[i], END_RX_QUEUE_SIZE);
       
        pEndObj->end_recv_buffer = (unsigned char *)pUartRxBuf[i];

        pEndObj->last_receive_len = 0;
        pEndObj->receive_len = 0;

        pEndObj->recv_timeout = 0;

        UART_ReceiveData(i, pEndObj->end_recv_buffer, UART_RECV_BUF_SIZE);

        // 所有串口状态转到REVC STATUS
        pEndObj->end_send_status = END_STATUS_IDLE;

        USART_ITConfig((USART_TypeDef *)g_EndObject[i], USART_IT_RXNE, ENABLE);
    }
}

U32 End_uart_send(UCHAR end_id, UCHAR *txbuf, USHORT txnum)
{
    USART_TypeDef *UARTx;
    P_UART_CCB p_uc;
    UCHAR send_byte = 0;
    

    if(txnum < 1)
    {
        return FALSE;
    }

    switch(end_id)
    {    
    case LCD_COM_PORT:      
        UARTx = LCD_UART;
        break; 
        
    case cPLC_COM_PORT:      
        UARTx = cPLC_UART;
        break; 
        
    case mPLC_COM_PORT:      
        UARTx = mPLC_UART;
        break; 
        
    default:
        return FALSE;
    }

    p_uc = &g_uart_ccb[end_id];

    p_uc->gpUartTxAddress = txbuf;
    p_uc->gUartTxCnt = txnum;

    send_byte = *(p_uc->gpUartTxAddress);

    p_uc->gpUartTxAddress++;
    p_uc->gUartTxCnt--;

    USART_SendData(UARTx, send_byte);

    if(p_uc->gUartTxCnt)
        USART_ITConfig(UARTx, USART_IT_TXE, ENABLE);

    return TRUE;
}

unsigned char End_postProcess(unsigned char end_type,  pvoid h)
{
    P_MSG_INFO pMsg = (P_MSG_INFO)h;
    USHORT iRet = FALSE;
    

    switch(end_type)
    {
    case LCD_COM_PORT:
        iRet = LCD_postProcess(pMsg);
        break;

    case cPLC_COM_PORT:
        iRet = cPLC_postProcess(pMsg);
        break;    

    case mPLC_COM_PORT:
        iRet = mPLC_postProcess(pMsg);
        break;        

    default:
        break;  
    }

    free_send_buffer(pMsg);

    return iRet;
}

void UART_IRQProc(UART_CCB *uccb, USART_TypeDef *UARTx)
{
  if(USART_GetITStatus(UARTx, USART_IT_RXNE) != RESET)
  {
    /* Read one byte from the receive data register */    
    *(uccb->gpUartRxAddress) = USART_ReceiveData(UARTx);
    uccb->gpUartRxAddress++;

    if(uccb->gpUartRxAddress == uccb->gpUartRxEndAddress)
    {
        //回头
        uccb->gpUartRxAddress = uccb->gpUartRxStartAddress;
    }
	
    if(uccb->gpUartRxReadAddress == uccb->gpUartRxAddress)
    {
        //可以考虑加错误统计
    } 
    
#if (LED_UART_EN > 0u)
    LED_UART_ON();
#endif
  }

  if(USART_GetITStatus(UARTx, USART_IT_TXE) != RESET)
  {   
    /* Write one byte to the transmit data register */
    if( uccb->gUartTxCnt > 0 )
    {
        USART_SendData(UARTx, *(uccb->gpUartTxAddress));
    	uccb->gpUartTxAddress++;   	
    	uccb->gUartTxCnt--;
	}
    else
    {        
        USART_ITConfig(UARTx, USART_IT_TXE, DISABLE);
    }

#if (LED_UART_EN > 0u)
    LED_UART_ON();
#endif	
  }
}
